deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-event-bot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: music-event-bot
  template:
    metadata:
      labels:
        app: music-event-bot
    spec:
      containers:
        - name: music-event-bot
          image: vitaliypunko/music-event-bot:0.0.2-f0f5f34
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.1"
              memory: "128Mi"
            limits:
              cpu: "0.3"
              memory: "300Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3



---
apiVersion: v1
kind: Service
metadata:
  name: music-event-bot-service
spec:
  selector:
    app: music-event-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
