deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-event-bot-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-test
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - music-event-bot.duckdns.org
      secretName: music-event-bot-tls

  rules:
    - host: music-event-bot.duckdns.org
      http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: music-event-bot-service
                port:
                  number: 80
